# serialhub

./: .gitignore  .prettyc  CMakeLists.txt  LICENSE  README.md  circularbuffer.c  circularbuffer.h  cli.c  cli.h  common.c  common.h  config.h.in  connection.c  connection.h  logging.c  logging.h  main.c  makefile  mux.c  mux.h  networking.c  networking.h  serialhub  serialhub.c  serialhub.h  settings.c  settings.h  tcp.c  tcp.h  tty.c  tty.h  unix.c  unix.h
